--- a/calendar/libical/src/libical/Makefile.in
+++ b/calendar/libical/src/libical/Makefile.in
@@ -54,7 +54,7 @@ CSRCS += \
 	icalrestriction.c \
 	$(NULL)
 
-include $(topsrcdir)/config/rules.mk
+include $(moztopsrcdir)/config/rules.mk
 
 ######################################################################
 #
