--- a/im/app/Makefile.in
+++ b/im/app/Makefile.in
@@ -4,10 +4,10 @@
 
 AB_CD = $(MOZ_UI_LOCALE)
 
-GRE_MILESTONE = $(shell $(PYTHON) $(MOZILLA_SRCDIR)/config/printconfigsetting.py $(DIST)/bin/platform.ini Build Milestone)
-MOZ_BUILDID = $(shell $(PYTHON) $(MOZILLA_SRCDIR)/config/printconfigsetting.py $(DIST)/bin/platform.ini Build BuildID)
+GRE_MILESTONE = $(shell $(PYTHON) $(moztopsrcdir)/config/printconfigsetting.py $(DIST)/bin/platform.ini Build Milestone)
+MOZ_BUILDID = $(shell $(PYTHON) $(moztopsrcdir)/config/printconfigsetting.py $(DIST)/bin/platform.ini Build BuildID)
 
-LICENSE_TXT_FILE = $(topsrcdir)/im/LICENSE.txt
+LICENSE_TXT_FILE = $(commtopsrcdir)/im/LICENSE.txt
 
 DEFINES += \
   -DINSTANTBIRD_ICO=\"$(DIST)/branding/instantbird.ico\" \
@@ -27,7 +27,7 @@ endif
 # shouldn't get 755 perms need $(IFLAGS1) for either way of calling nsinstall.
 NSDISTMODE = copy
 
-include $(topsrcdir)/config/config.mk
+include $(moztopsrcdir)/config/config.mk
 
 # If we are trying to show an error dialog about the lack of SSE2 support,
 # make sure that code itself doesn't use SSE2.
@@ -44,14 +44,14 @@ ifeq ($(OS_ARCH),WINNT)
 png2ico = $(PYTHON) $(srcdir)/png2ico.py $(1) $(2) $(3) $(4) $(5)
 
 # Extract the icons we care about embedding into the EXE
-available-16.ico: $(topsrcdir)/chat/themes/available-16.png $(srcdir)/png2ico.py
-	$(call png2ico,$(topsrcdir)/chat/themes/available-16.png,0,0,16,available-16.ico)
+available-16.ico: $(commtopsrcdir)/chat/themes/available-16.png $(srcdir)/png2ico.py
+	$(call png2ico,$(commtopsrcdir)/chat/themes/available-16.png,0,0,16,available-16.ico)
 
-away-16.ico: $(topsrcdir)/chat/themes/away-16.png $(srcdir)/png2ico.py
-	$(call png2ico,$(topsrcdir)/chat/themes/away-16.png,0,0,16,away-16.ico)
+away-16.ico: $(commtopsrcdir)/chat/themes/away-16.png $(srcdir)/png2ico.py
+	$(call png2ico,$(commtopsrcdir)/chat/themes/away-16.png,0,0,16,away-16.ico)
 
-offline-16.ico: $(topsrcdir)/chat/themes/offline-16.png $(srcdir)/png2ico.py
-	$(call png2ico,$(topsrcdir)/chat/themes/offline-16.png,0,0,16,offline-16.ico)
+offline-16.ico: $(commtopsrcdir)/chat/themes/offline-16.png $(srcdir)/png2ico.py
+	$(call png2ico,$(commtopsrcdir)/chat/themes/offline-16.png,0,0,16,offline-16.ico)
 
 embedded-icons:: available-16.ico away-16.ico offline-16.ico
 GARBAGE += available-16.ico away-16.ico offline-16.ico
@@ -63,7 +63,7 @@ GARBAGE += available-16.ico away-16.ico offline-16.ico
 EXTRA_DEPS += instantbird.exe.manifest
 endif
 
-include $(topsrcdir)/config/rules.mk
+include $(moztopsrcdir)/config/rules.mk
 
 ifeq ($(OS_ARCH),WINNT)
 
@@ -174,11 +174,11 @@ ifdef ENABLE_TESTS
 # mozilla-central does this in testing/xpcshell-tests which means that it is very
 # hard for anyone to specify anything else.
 libs::
-	$(INSTALL) $(IFLAGS1) $(topsrcdir)/im/test/xpcshell.ini $(DEPTH)/_tests/xpcshell
-	cp $(topsrcdir)/im/test/xpcshell.ini $(DEPTH)/_tests/xpcshell/all-test-dirs.list
+	$(INSTALL) $(IFLAGS1) $(commtopsrcdir)/im/test/xpcshell.ini $(DEPTH)/_tests/xpcshell
+	cp $(commtopsrcdir)/im/test/xpcshell.ini $(DEPTH)/_tests/xpcshell/all-test-dirs.list
 endif
 
-libs:: $(topsrcdir)/mail/app/blocklist.xml
+libs:: $(commtopsrcdir)/mail/app/blocklist.xml
 	$(INSTALL) $(IFLAGS1) $^ $(DIST)/bin
 
 ifeq (cocoa,$(MOZ_WIDGET_TOOLKIT))
