--- a/im/configure.in
+++ b/im/configure.in
@@ -7,6 +7,12 @@ dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.
 dnl Things we need to carry from confvars.sh
 AC_SUBST(INSTANTBIRD_VERSION)
 
+dnl More things we need to carry from confvars.sh
+AC_SUBST(moztopsrcdir)
+AC_SUBST(commtopsrcdir)
+AC_SUBST(mozreltopsrcdir)
+AC_SUBST(commreltopsrcdir)
+
 if test `echo "$MOZ_EXTENSIONS" | grep -c purple` -ne 0; then
     MOZ_PURPLE=1
     AC_SUBST(MOZ_PURPLE)
