--- a/mail/configure.in
+++ b/mail/configure.in
@@ -12,6 +12,12 @@ AC_SUBST(THUNDERBIRD_VERSION)
 AC_DEFINE(MOZ_SEPARATE_MANIFEST_FOR_THEME_OVERRIDES)
 AC_SUBST(MOZ_BUNDLED_FONTS)
 
+dnl More things we need to carry from confvars.sh
+AC_SUBST(moztopsrcdir)
+AC_SUBST(commtopsrcdir)
+AC_SUBST(mozreltopsrcdir)
+AC_SUBST(commreltopsrcdir)
+
 dnl Optional parts of the build.
 AC_SUBST(MOZ_MORK)
 if test "$MOZ_MORK"; then
