--- a/mail/installer/Makefile.in
+++ b/mail/installer/Makefile.in
@@ -14,6 +14,9 @@ MOZ_PKG_MANIFEST_P = $(srcdir)/package-manifest.in
 ifndef SYSTEM_LIBXUL
 MOZ_PKG_FATAL_WARNINGS = 1
 endif
+
+DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/mail/locales/locale-manifest.in
+
 MOZ_PKG_DUPEFLAGS = \
 	-f $(srcdir)/allowed-dupes.mn \
 	-f $(moztopsrcdir)/browser/installer/allowed-dupes.mn \
