--- a/suite/installer/Makefile.in
+++ b/suite/installer/Makefile.in
@@ -14,6 +14,8 @@ ifndef SYSTEM_LIBXUL
 MOZ_PKG_FATAL_WARNINGS = 1
 endif
 
+DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/suite/locales/locale-manifest.in
+
 MOZ_PKG_DUPEFLAGS = \
 	-w \
 	-f $(srcdir)/allowed-dupes.mn \
