--- a/im/installer/package-manifest.in
+++ b/im/installer/package-manifest.in
@@ -318,6 +318,8 @@
 @RESPATH@/components/devtools-startup.js
 @RESPATH@/components/aboutdebugging-registration.js
 @RESPATH@/components/aboutdebugging.manifest
+@RESPATH@/components/aboutdevtools-registration.js
+@RESPATH@/components/aboutdevtools.manifest
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Base Package Files
