--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -325,6 +325,8 @@
 @RESPATH@/components/devtools-startup.js
 @RESPATH@/components/aboutdebugging-registration.js
 @RESPATH@/components/aboutdebugging.manifest
+@RESPATH@/components/aboutdevtools-registration.js
+@RESPATH@/components/aboutdevtools.manifest
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Default Profile Settings
