--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -374,6 +374,8 @@
 @RESPATH@/components/devtools-startup.js
 @RESPATH@/components/aboutdebugging-registration.js
 @RESPATH@/components/aboutdebugging.manifest
+@RESPATH@/components/aboutdevtools-registration.js
+@RESPATH@/components/aboutdevtools.manifest
 @RESPATH@/components/Downloads.manifest
 @RESPATH@/components/DownloadLegacy.js
 @RESPATH@/components/EditorUtils.manifest
