Bug 1366607: Refer explicitly to the top comm objdir, rather than using a relative depth; rs=bustage-fix
MozReview-Commit-ID: 5VSSyAFsFNe

--- a/mail/configure.in
+++ b/mail/configure.in
@@ -17,6 +17,7 @@ AC_SUBST(moztopsrcdir)
 AC_SUBST(commtopsrcdir)
 AC_SUBST(mozreltopsrcdir)
 AC_SUBST(commreltopsrcdir)
+AC_SUBST(commtopobjdir)
 
 dnl Optional parts of the build.
 AC_SUBST(MOZ_MORK)
