--- a/suite/configure.in
+++ b/suite/configure.in
@@ -11,6 +11,9 @@ AC_SUBST(MOZ_COMPOSER)
 AC_SUBST(SEAMONKEY_VERSION)
 AC_DEFINE(MOZ_SEPARATE_MANIFEST_FOR_THEME_OVERRIDES)
 AC_SUBST(MOZ_BUNDLED_FONTS)
+AC_SUBST(MOZ_IRC)
+AC_SUBST(MOZ_DOMINSPECTOR)
+AC_SUBST(MOZ_DEBUGQA)
 
 dnl More things we need to carry from confvars.sh
 AC_SUBST(moztopsrcdir)
