Bug 1383388 - Follow-up: Adapt to landed M-C version. rs=bustage-fix CLOSED TREE

--- a/mail/installer/Makefile.in
+++ b/mail/installer/Makefile.in
@@ -15,7 +15,8 @@ ifndef SYSTEM_LIBXUL
 MOZ_PKG_FATAL_WARNINGS = 1
 endif
 
-DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/mail/locales/locale-manifest.in
+DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/mail/installer/locale-manifest.in
+MOZ_CHROME_LOCALE_ENTRIES=@RESPATH@/chrome/
 
 MOZ_PKG_DUPEFLAGS = \
 	-f $(srcdir)/allowed-dupes.mn \
