--- a/suite/installer/Makefile.in
+++ b/suite/installer/Makefile.in
@@ -14,7 +14,8 @@ ifndef SYSTEM_LIBXUL
 MOZ_PKG_FATAL_WARNINGS = 1
 endif
 
-DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/suite/locales/locale-manifest.in
+DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/suite/installer/locale-manifest.in
+MOZ_CHROME_LOCALE_ENTRIES=@RESPATH@/chrome/
 
 MOZ_PKG_DUPEFLAGS = \
 	-w \
