Port bug 1384753 to TB/IB/SM: Move Application Reputation files into a new component. rs=bustage-fix

--- a/im/installer/package-manifest.in
+++ b/im/installer/package-manifest.in
@@ -645,6 +645,7 @@
 @RESPATH@/components/txEXSLTRegExFunctions.js
 @RESPATH@/components/txEXSLTRegExFunctions.manifest
 @RESPATH@/components/feeds.xpt
+@RESPATH@/components/reputationservice.xpt
 @RESPATH@/components/saxparser.xpt
 @RESPATH@/components/satchel.manifest
 @RESPATH@/components/satchel.xpt
