--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -290,6 +290,7 @@
 @RESPATH@/components/profiler.xpt
 #endif
 @RESPATH@/components/rdf.xpt
+@RESPATH@/components/reputationservice.xpt
 @RESPATH@/components/satchel.xpt
 @RESPATH@/components/satchel.manifest
 @RESPATH@/components/saxparser.xpt
