Bug 1458700: [release-promotion] Add watershed for initial beta win64 release; r=me
Now that we have a win64 release, we can test updates from that release.

--- a/taskcluster/ci/release-update-verify-config/kind.yml
+++ b/taskcluster/ci/release-update-verify-config/kind.yml
@@ -52,9 +52,15 @@ job-defaults:
                 default: beta
         last-watershed:
             by-project:
-                comm-beta: "56.0b3"
+                comm-beta:
+                    by-platform:
+                        win64.*: "60.0b7"
+                        default: "56.0b3"
                 comm-esr60: "60.0esr"
-                try-comm-central: "56.0b3"
+                try-comm-central:
+                    by-platform:
+                        win64.*: "60.0b7"
+                        default: "56.0b3"
                 default: null
 
 jobs:
