Port bug 1458917 to TB/SM: add RemoteSettingsComponents.js to package manifests. rs=bustage-fix

--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -306,6 +306,7 @@
 @RESPATH@/components/recording-cmdline.manifest
 @RESPATH@/components/servicesComponents.manifest
 @RESPATH@/components/servicesSettings.manifest
+@RESPATH@/components/RemoteSettingsComponents.js
 @RESPATH@/components/ProcessSelector.js
 @RESPATH@/components/ProcessSelector.manifest
 @RESPATH@/components/SlowScriptDebug.js
