--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -487,6 +487,9 @@
 @RESPATH@/components/Push.manifest
 @RESPATH@/components/PushComponents.js
 
+@RESPATH@/components/remotebrowserutils.manifest
+@RESPATH@/components/RemoteWebNavigation.js
+
 @RESPATH@/components/ProcessSelector.js
 @RESPATH@/components/ProcessSelector.manifest
 
