--- a/taskcluster/ci/nightly-l10n/kind.yml
+++ b/taskcluster/ci/nightly-l10n/kind.yml
@@ -72,7 +72,7 @@ job-template:
             linux.*:   # linux64 and 32 get same treatment here
                 EN_US_PACKAGE_NAME: target.tar.bz2
                 EN_US_BINARY_URL:
-                    task-reference: https://queue.taskcluster.net/v1/task/<signed-build>/artifacts/public/build
+                    task-reference: https://queue.taskcluster.net/v1/task/<build-signing>/artifacts/public/build
                 MAR_TOOLS_URL:
                     task-reference: https://queue.taskcluster.net/v1/task/<unsigned-build>/artifacts/public/build/host/bin
             macosx64-nightly:
@@ -80,15 +80,15 @@ job-template:
                 EN_US_BINARY_URL:
                     task-reference: https://queue.taskcluster.net/v1/task/<repackage>/artifacts/public/build
                 MAR_TOOLS_URL:
-                    task-reference: https://queue.taskcluster.net/v1/task/<unsigned-build>/artifacts/public/build/host/bin
+                    task-reference: https://queue.taskcluster.net/v1/task/<build>/artifacts/public/build/host/bin
             win.*:
                 EN_US_PACKAGE_NAME: target.zip
                 EN_US_BINARY_URL:
-                    task-reference: https://queue.taskcluster.net/v1/task/<signed-build>/artifacts/public/build
+                    task-reference: https://queue.taskcluster.net/v1/task/<build-signing>/artifacts/public/build
                 EN_US_INSTALLER_BINARY_URL:
-                    task-reference: https://queue.taskcluster.net/v1/task/<repackage-signed>/artifacts/public/build
+                    task-reference: https://queue.taskcluster.net/v1/task/<repackage-signing>/artifacts/public/build
                 MAR_TOOLS_URL:
-                    task-reference: https://queue.taskcluster.net/v1/task/<unsigned-build>/artifacts/public/build/host/bin
+                    task-reference: https://queue.taskcluster.net/v1/task/<build>/artifacts/public/build/host/bin
     mozharness:
         comm-checkout: true
         config-paths:
