--- a/taskcluster/ci/nightly-l10n/kind.yml
+++ b/taskcluster/ci/nightly-l10n/kind.yml
@@ -74,7 +74,7 @@ job-template:
                 EN_US_BINARY_URL:
                     task-reference: https://queue.taskcluster.net/v1/task/<build-signing>/artifacts/public/build
                 MAR_TOOLS_URL:
-                    task-reference: https://queue.taskcluster.net/v1/task/<unsigned-build>/artifacts/public/build/host/bin
+                    task-reference: https://queue.taskcluster.net/v1/task/<build>/artifacts/public/build/host/bin
             macosx64-nightly:
                 EN_US_PACKAGE_NAME: target.dmg
                 EN_US_BINARY_URL:
