--- a/.eslintignore
+++ b/.eslintignore
@@ -40,6 +40,7 @@ mail/themes/**
 
 # mail/components exclusions
 mail/components/*
+!mail/components/about-support
 !mail/components/extensions
 
 # calendar/ exclusions
