Bug 1479193 - Provide dummy built_in_addons.json in SeaMonkey. r=IanN Port Bug 1416480 ["List of valid built-in add-ons could not be parsed. (NS_ERROR_FILE_NOT_FOUND) [nsIXPCComponents_Utils.readURI]" at Thunderbird startup] to SeaMonkey.

--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -342,6 +342,9 @@
 @RESPATH@/components/extension-process-script.js
 
 ; [Browser Chrome Files]
+; Browser: Hack to get built_in_addons.json packaged
+@RESPATH@/chrome/browser@JAREXT@
+@RESPATH@/chrome/browser.manifest
 @RESPATH@/chrome/comm@JAREXT@
 @RESPATH@/chrome/comm.manifest
 @RESPATH@/chrome/recording.manifest
