Port bug 1467359 - add Fetch-URL to config.yml. rs=bustage-fix DONTBUILD

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -12,6 +12,7 @@ treeherder:
         'TW64': 'Toolchain builds for Windows 64-bits'
         'Deb7': 'Packages for Debian 7'
         'Deb9': 'Packages for Debian 9'
+        'Fetch-URL': 'Fetch and store content'
         'L10n': 'Localised Repacks'
         'L10n-Rpk': 'Localized Repackaged Repacks'
         'rs': 'Repackage signing'
