Bug 1478572 - Turn on ESLint in mail/components/devtools. r=aceman

--- a/.eslintignore
+++ b/.eslintignore
@@ -42,6 +42,7 @@ mail/themes/**
 mail/components/*
 !mail/components/about-support
 !mail/components/accountcreation
+!mail/components/devtools
 !mail/components/extensions
 
 # calendar/ exclusions
